--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,8 @@
 
     {{ content }}
 
+    <p class="center" style="margin-top: 3em; opacity: 0.4;"> Zafer © Sevik LLC</p>
+    
 </body>
 
 </html>
